need update library for test and refactor test classes